// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App Sidebar when the sidebar is closed, renders and matches snapshot 1`] = `
<aside
  className="app-sidebar app-sidebar--closed"
>
  <div
    className="app-sidebar__header"
  >
    Menu
    <Button
      className="app-sidebar__header__close"
      onClick={[Function]}
    >
      <FontAwesomeIcon
        border={false}
        className="app-sidebar__header__close__icon"
        fixedWidth={false}
        flip={null}
        icon={
          Object {
            "icon": Array [
              352,
              512,
              Array [],
              "f00d",
              "M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z",
            ],
            "iconName": "times",
            "prefix": "fas",
          }
        }
        inverse={false}
        listItem={false}
        mask={null}
        pull={null}
        pulse={false}
        rotation={null}
        size={null}
        spin={false}
        symbol={false}
        title=""
        transform={null}
      />
    </Button>
  </div>
  <div
    className="app-sidebar__user-block"
  >
    user block
  </div>
  <div
    className="app-sidebar__separator"
  />
  <ul
    className="app-sidebar__item-list"
  >
    <li
      className="app-sidebar__item-list__item"
      key="1"
    >
      <Link
        replace={false}
        to="/page1"
      >
        page1
      </Link>
    </li>
    <li
      className="app-sidebar__item-list__item"
      key="2"
    >
      <Link
        replace={false}
        to="/page2"
      >
        page2
      </Link>
    </li>
    <li
      className="app-sidebar__item-list__item"
      key="3"
    >
      <Link
        replace={false}
        to="/library"
      >
        Library
      </Link>
    </li>
  </ul>
</aside>
`;

exports[`App Sidebar when the sidebar is open, renders and matches snapshot 1`] = `
<aside
  className="app-sidebar app-sidebar--open"
>
  <div
    className="app-sidebar__header"
  >
    Menu
    <Button
      className="app-sidebar__header__close"
      onClick={[Function]}
    >
      <FontAwesomeIcon
        border={false}
        className="app-sidebar__header__close__icon"
        fixedWidth={false}
        flip={null}
        icon={
          Object {
            "icon": Array [
              352,
              512,
              Array [],
              "f00d",
              "M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z",
            ],
            "iconName": "times",
            "prefix": "fas",
          }
        }
        inverse={false}
        listItem={false}
        mask={null}
        pull={null}
        pulse={false}
        rotation={null}
        size={null}
        spin={false}
        symbol={false}
        title=""
        transform={null}
      />
    </Button>
  </div>
  <div
    className="app-sidebar__user-block"
  >
    user block
  </div>
  <div
    className="app-sidebar__separator"
  />
  <ul
    className="app-sidebar__item-list"
  >
    <li
      className="app-sidebar__item-list__item"
      key="1"
    >
      <Link
        replace={false}
        to="/page1"
      >
        page1
      </Link>
    </li>
    <li
      className="app-sidebar__item-list__item"
      key="2"
    >
      <Link
        replace={false}
        to="/page2"
      >
        page2
      </Link>
    </li>
    <li
      className="app-sidebar__item-list__item"
      key="3"
    >
      <Link
        replace={false}
        to="/library"
      >
        Library
      </Link>
    </li>
  </ul>
</aside>
`;
